@@ -2,8 +2,20 @@ As always, there is much to do...
 
 - Storing last open files or having a quick-list of most important
   directories or so would be great 
-  Problem: the existing <Placeholder> stuff works only on constrcution time.
+  Problem: the existing <Placeholder> stuff works only on construction time.
     For this we need a menu that can change during the life of the application.
+
+- Use GTK+ 2.4 UIManager and ActionGroups (?):
+  . We have to keep the gaphor.misc.action module intact.
+  . As far as I can see, cross action updates, are not supported.
+  . Properties can be mapped in a straightforward way.
+  . Should actions be split up: one for the main window, one group per
+    diagram and one group per item type?
+  . GtkUIManager looks useful, some structures in Gaphor may have to be
+    reconsidered. What to do with AccelMaps for example. (I really have
+    to read the tutorial some day ;-).
+  . The current structure is simple and quite Pythonic. It should be this way.
+  . Stuff like a recent-file box will be easier to create (I guess).
 
 - Store application state:
   - last opened files
@@ -11,7 +23,8 @@ As always, there is much to do...
   #- window size
   #- reset tool option
 
-- When Stereotype has no submenu items, grey it out. Same goes for "Export" menu.
+- When Stereotype has no submenu items, grey it out. Same goes for "Export"
+  menu. This will be handled by the UIManager in the near future.
 
 - disable actions when editing.
 
