@@ -12,7 +12,7 @@ class Wrapbox(gtk.Table):
         self.__gobject_init__()
         self.resize_idle_id = 0
         self.rows = 1
-        self.cols = 0
+        self.cols = 1
         #self.table = gtk.Table(self.rows, self.cols)
         self.resize(self.rows, self.cols)
         #self.table.connect('size_allocate', self.on_size_allocate)
