@@ -1,4 +1,8 @@
 2004-11-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+	
+	* gaphor/ui/mainwindow.py: Allow mainwindow to shrink.
+
+2004-11-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 
 	* gaphor/UML/uml2.gaphor: implemented Interaction diagrams.
 	* utils/genUML2.py: let code generator support Sort suffix.
